--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "headless",
     "medusa"
   ],
-  "engines": {
-    "node": ">=20"
-  },
+ "engines": {
+  "node": ">=16.0.0"
+},
   "scripts": {
     "build": "medusa build",
-    "start": "medusa migrations run && medusa develop -p=8080",
+    "start": "medusa develop -p=8080",
     "dev": "medusa develop",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
